--- a/views/index.jade
+++ b/views/index.jade
@@ -29,4 +29,14 @@ html
           input(type='text',placeholder='邮件全文搜索')#search-txt
     div.content
       div.nav-list
+        ul
+          li
+            span.write-letter
+            a(href='#') 写信
+          li
+            span.receive-letter
+            a(href='#') 收信
+          li
+            span.contact
+            a(hef='#') 通讯录
       div.work-area
