--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,13 @@
+html {
+  height: 100%;
+}
 body {
+  height: 100%;
+}
+body,
+ul {
   margin: 0;
+  padding: 0;
 }
 li {
   list-style: none;
@@ -64,4 +72,45 @@ li {
 .header .header-search .input-txt input {
   width: 100%;
   margin-right: 3px;
+}
+.content {
+  height: 100%;
+}
+.content .nav-list {
+  background-color: #E8EBEF;
+  width: 187px;
+  height: 100%;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 5px 5px 5px 20px;
+  float: left;
+}
+.content .nav-list li {
+  margin: 3px;
+  height: 26px;
+  line-height: 26px;
+}
+.content .nav-list span {
+  margin-top: 4px;
+  height: 20px;
+  width: 25px;
+  float: left;
+}
+.content .nav-list a {
+  margin: 5px 0 5px 5px;
+  color: #354B66;
+  text-decoration: none;
+}
+.content .nav-list .write-letter {
+  background: url('../imgs/nav-btn.gif') 0 -1px no-repeat;
+}
+.content .nav-list .receive-letter {
+  background: url('../imgs/nav-btn.gif') 0 -33px no-repeat;
+}
+.content .nav-list .contact {
+  background: url('../imgs/nav-btn.gif') 0 -63px no-repeat;
+}
+.content .work-area {
+  background-color: #fff;
+  height: 100%;
 }
