--- a/views/index.jade
+++ b/views/index.jade
@@ -106,5 +106,52 @@ html
                   a(href='#') 发明信片
               div.split
                 a(href='#').mid-anchor 查看所有好友生日>>
-        div.main-center 1
-        
+        div.main-center
+          div.top
+            div.title  夜深了，
+              a(href='#') 子非鱼
+              span 。
+            div.summary
+              span.envelop
+              span 邮件：9封
+              a(href='#') 未读邮件
+              span ，3封
+              a(href='#') 星标邮件
+            div.mail-list
+              a(href='#') 群邮件(8)
+              a(href='#') QQ邮件订阅(1)
+              a(href='#') 订阅中心(10)
+          div.intr
+            div.title  邮箱推荐
+            div.ad
+            div.fav
+              span.iphone  iPhone版
+              span.post-card  明信片-贺卡
+              span.ipad  iPad版
+              span.note-book  记事本-日历
+              span.android  Android版
+              span.transfer  文件中转站          
+          div.bottom
+            div.line-1
+              a(href='#') 2015年8月7日更新
+              span |
+              a(href='#') 暖灯行动
+              span |
+              a(href='#') 企业邮箱
+              span |
+              a(href='#') 开放平台
+              span |
+              a(href='#') 体验室
+              span |
+              a(href='#') 邮箱助手
+              span |
+              a(href='#') 自助查询
+              span |
+              a(href='#') 团队博客
+              span |
+              a(href='#') 加入我们
+            div.line-2
+              span &nbsp;标准版
+              a(href='#') 基本版
+              span |
+              span.grey  © 1998 - 2016 Tencent Inc. All Rights Reserved
